Spacing/padding fix around legends

--- a/css/main.css
+++ b/css/main.css
@@ -84,6 +84,7 @@ fieldset {
     width: 93.75%;
     margin: auto;
     padding: 0;
+    padding-bottom: 30px;
     border: none;
 }
 
@@ -176,6 +177,7 @@ legend {
     font-size: 1.4em;
     font-weight: 600;
     padding-bottom: 30px;
+    padding-top: 30px;
 }
 
 label {
@@ -307,5 +309,8 @@ footer {
         padding-top: 50px;
         padding-bottom: 50px;
     }
-
+    
+    fieldset {    
+        padding-bottom: 50px;
+    }
 }
